--- a/Ch5_3/app/src/main/res/layout/activity_main.xml
+++ b/Ch5_3/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/btnEnlarge"
+    android:id="@+id/buttonEnlarge"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -20,12 +21,12 @@
         app:layout_constraintVertical_bias="0.16" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnEnlarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="46dp"
         android:layout_marginBottom="33dp"
-        android:text="放大"
+        android:text="@string/Big"
         app:layout_constraintBottom_toTopOf="@+id/txtOutput"
         app:layout_constraintStart_toStartOf="parent" />
 
